--- a/build.gradle
+++ b/build.gradle
@@ -13,34 +13,27 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation 'org.springframework:spring-context:5.3.31'
+    implementation 'org.springframework:spring-webmvc:5.3.31'
+    implementation 'org.springframework:spring-jdbc:5.3.31'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.5'
+    implementation 'javax.servlet:jstl:1.2'
+    implementation 'org.aspectj:aspectjrt:1.9.7'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.4'
+    implementation 'mysql:mysql-connector-java:8.0.33'
+    implementation 'com.zaxxer:HikariCP:4.0.3'
+    implementation 'org.thymeleaf:thymeleaf-spring5:3.0.15.RELEASE'
+    implementation 'org.springframework.data:spring-data-jpa:2.7.18'
+    implementation 'org.hibernate:hibernate-core:5.6.15.Final'
 
-    //j
-    providedCompile "javax.servlet:servlet-api:2.5"
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.18'
+    testImplementation 'org.springframework:spring-test:5.3.31'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation 'javax.servlet:javax.servlet-api:4.0.1'
 
-    // lombok
-    implementation 'org.projectlombok:lombok:1.18.22'
-    annotationProcessor 'org.projectlombok:lombok:1.18.22'
-    testImplementation 'org.projectlombok:lombok:1.18.22'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
+    compileOnly 'org.projectlombok:lombok:1.18.30'
 
-    // mybatis
-    implementation 'org.mybatis:mybatis:3.5.13'
-    implementation 'org.mybatis:mybatis-spring:3.0.2'
-
-    // SpringFramework
-    implementation "org.springframework:spring-aop:5.2.22.RELEASE"
-    implementation "org.springframework:spring-beans:5.2.22.RELEASE"
-    implementation "org.springframework:spring-context:5.2.22.RELEASE"
-    implementation "org.springframework:spring-core:5.2.22.RELEASE"
-    implementation "org.springframework:spring-expression:5.2.22.RELEASE"
-    implementation "org.springframework:spring-jcl:5.2.22.RELEASE"
-    implementation "org.springframework:spring-tx:5.2.22.RELEASE"
-    implementation "org.springframework:spring-web:5.2.22.RELEASE"
-    implementation "org.springframework:spring-webmvc:5.2.22.RELEASE"
-    implementation "org.springframework:spring-jdbc:5.2.22.RELEASE"
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
 }
 
 test {
