--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'org.thymeleaf:thymeleaf-spring5:3.0.15.RELEASE'
     implementation 'org.springframework.data:spring-data-jpa:2.7.18'
     implementation 'org.hibernate:hibernate-core:5.6.15.Final'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.8'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.18'
     testImplementation 'org.springframework:spring-test:5.3.31'
